--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,10 @@ version: "3.8"
 
 services:
   app:
-    image: ghcr.io/henken-club/prototype-backend:main
+    image: ghcr.io/henken-club/prototype-backend:main@sha256:eeba3a3221d8d7df764941b69898f4e476f2ee8af309bc0dd56c2b6a45020a04
     ports:
       - published: 4000
         target: 4000
-    environment:
-      GRAPHQL_PLAYGROUND: enable
-      JWT_ACCESS_SECRET: $APP_JWT_ACCESS_SECRET
-      JWT_REFRESH_SECRET: $APP_JWT_REFRESH_SECRET
-      NEO4J_USERNAME: $APP_NEO4J_USERNAME
-      NEO4J_PASSWORD: $APP_NEO4J_PASSWORD
-      NEO4J_URL: bolt://neo4j:7687
-      PRISMA_DATABASE_URL: mysql://root:$APP_MYSQL_ROOT_PASSWORD@mysql:3306/$APP_MYSQL_DATABASE
-      IMAGEPROXY_URL: http://localhost:8080
     depends_on:
       neo4j:
         condition: service_healthy
@@ -22,6 +13,35 @@ services:
         condition: service_healthy
       prisma-migrate:
         condition: service_completed_successfully
+    environment:
+      GRAPHQL_PLAYGROUND: enable
+
+      JWT_ACCESS_SECRET: $APP_JWT_ACCESS_SECRET
+      JWT_REFRESH_SECRET: $APP_JWT_REFRESH_SECRET
+
+      IMGPROXY_BASE_URL: http://localhost:8080
+      IMGPROXY_KEY: $APP_IMGPROXY_KEY
+      IMGPROXY_SALT: $APP_IMGPROXY_SALT
+
+      NEO4J_USERNAME: $APP_NEO4J_USERNAME
+      NEO4J_PASSWORD: $APP_NEO4J_PASSWORD
+      NEO4J_URL: bolt://neo4j:7687
+
+      PRISMA_DATABASE_URL: mysql://$APP_MYSQL_USERNAME:$APP_MYSQL_PASSWORD@mysql:3306/$APP_MYSQL_DATABASE
+
+  imgproxy:
+    image: darthsim/imgproxy:latest
+    ports:
+      - published: $APP_IMGPROXY_PORT
+        target: 8080
+    healthcheck:
+      test: ["CMD", "imgproxy", "health"]
+      timeout: 10s
+      interval: 10s
+      retries: 10
+    environment:
+      IMGPROXY_KEY: $APP_IMGPROXY_KEY
+      IMGPROXY_SALT: $APP_IMGPROXY_SALT
 
   neo4j:
     image: neo4j:4.2
@@ -47,7 +67,9 @@ services:
       timeout: 3s
       retries: 30
     environment:
-      MYSQL_ROOT_PASSWORD: $APP_MYSQL_ROOT_PASSWORD
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: $APP_MYSQL_USERNAME
+      MYSQL_PASSWORD: $APP_MYSQL_PASSWORD
       MYSQL_DATABASE: $APP_MYSQL_DATABASE
     volumes:
       - mysql-data:/var/lib/mysql
@@ -58,28 +80,7 @@ services:
       mysql:
         condition: service_healthy
     environment:
-      PRISMA_DATABASE_URL: mysql://root:$APP_MYSQL_ROOT_PASSWORD@mysql:3306/$APP_MYSQL_DATABASE
-
-  imageproxy:
-    image: willnorris/imageproxy:latest
-    ports:
-      - published: 8080
-        target: 8080
-    depends_on:
-      imageproxy-redis:
-        condition: service_healthy
-    environment:
-      IMAGEPROXY_CACHE: redis://imageproxy-redis:6379
-
-  imageproxy-redis:
-    image: redis:6
-    healthcheck:
-      test: redis-cli ping
-      interval: 1s
-      timeout: 3s
-      retries: 30
-    volumes:
-      - imageproxy-redis-data:/data
+      PRISMA_DATABASE_URL: mysql://$APP_MYSQL_USERNAME:$APP_MYSQL_PASSWORD@mysql:3306/$APP_MYSQL_DATABASE
 
 volumes:
   neo4j-data:
@@ -87,4 +88,3 @@ volumes:
   neo4j-import:
   neo4j-plugins:
   mysql-data:
-  imageproxy-redis-data:
