PrettierをGitHub Actions上でかける

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   app:
@@ -35,7 +35,7 @@ services:
       - published: $APP_IMGPROXY_PORT
         target: 8080
     healthcheck:
-      test: ["CMD", "imgproxy", "health"]
+      test: ['CMD', 'imgproxy', 'health']
       timeout: 10s
       interval: 10s
       retries: 10
