IMGPROXY_BASE_URLも環境変数に

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       JWT_ACCESS_SECRET: $APP_JWT_ACCESS_SECRET
       JWT_REFRESH_SECRET: $APP_JWT_REFRESH_SECRET
 
-      IMGPROXY_BASE_URL: http://localhost:8080
+      IMGPROXY_BASE_URL: $APP_IMGPROXY_BASE_URL
       IMGPROXY_KEY: $APP_IMGPROXY_KEY
       IMGPROXY_SALT: $APP_IMGPROXY_SALT
 
