--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    image: ghcr.io/henken-club/prototype-backend:develop@sha256:d871e6143ddb6ecdf7005383a3ca08a117b6f2b3ceaf92466984a78c837a9f66
+    image: ghcr.io/henken-club/prototype-backend:develop@sha256:356fcf302bee276bed7bc584b0a3caad95e2b01d64fa0e00707a6e5d063f8383
     ports:
       - published: 4000
         target: 4000
@@ -23,7 +23,7 @@ services:
       IMGPROXY_KEY: $APP_IMGPROXY_KEY
       IMGPROXY_SALT: $APP_IMGPROXY_SALT
 
-      BOOKCOVER_PROXY_BASE_URL: http://bookcover-proxy:8080
+      BOOKCOVER_SERVICE_URL: bookcover-service:5000
 
       NEO4J_USERNAME: $APP_NEO4J_USERNAME
       NEO4J_PASSWORD: $APP_NEO4J_PASSWORD
@@ -31,10 +31,13 @@ services:
 
       PRISMA_DATABASE_URL: mysql://$APP_MYSQL_USERNAME:$APP_MYSQL_PASSWORD@mysql:3306/$APP_MYSQL_DATABASE
 
-  bookcover-proxy:
-    image: ghcr.io/henken-club/bookcover-proxy:develop@sha256:a7bc67e11d43e235d8f08178e32a6bf585fd083b5141c166f29ee3da3ad689a6
+  bookcover-service:
+    image: ghcr.io/henken-club/bookcover-grpc-service@sha256:691a4bd1fe5f1581038998b738e284981fcb6e39751c28c7e1773e05e35bec1c
     environment:
-      PORT: 8080
+      PORT: 5000
+      IMGPROXY_BASE_URL: $APP_IMGPROXY_BASE_URL
+      IMGPROXY_KEY: $APP_IMGPROXY_KEY
+      IMGPROXY_SALT: $APP_IMGPROXY_SALT
 
   imgproxy:
     image: darthsim/imgproxy:latest@sha256:dadbd505699a8f19795254e33cf62b0b8f6b461131860ee1e494d8369052da14
